# ChangeLog for dev-perl/MooseX-GlobRef
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/MooseX-GlobRef/ChangeLog,v 1.5 2011/01/14 16:58:53 tove Exp $

  14 Jan 2011; Torsten Veller <tove@gentoo.org> -MooseX-GlobRef-0.07.ebuild:
  Cleanup

*MooseX-GlobRef-0.0701 (24 Sep 2010)

  24 Sep 2010; Torsten Veller <tove@gentoo.org>
  +MooseX-GlobRef-0.0701.ebuild:
  Version bump

  03 Feb 2010; Torsten Veller <tove@gentoo.org> MooseX-GlobRef-0.07.ebuild:
  Depend on Module-Build. Remove test dependencies

  10 Aug 2009; Torsten Veller <tove@gentoo.org> MooseX-GlobRef-0.07.ebuild:
  New virtual: dev-perl/parent to virtual

*MooseX-GlobRef-0.07 (23 Jun 2009)

  23 Jun 2009; Robin H. Johnson <robbat2@gentoo.org>
  +MooseX-GlobRef-0.07.ebuild, +metadata.xml:
  Initial commit. Ebuild by Robin H. Johnson <robbat2@gentoo.org>.
