@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/MooseX-GlobRef
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/MooseX-GlobRef/ChangeLog,v 1.5 2011/01/14 16:58:53 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/MooseX-GlobRef/ChangeLog,v 1.6 2011/08/29 17:46:21 tove Exp $
+
+*MooseX-GlobRef-0.70.100 (29 Aug 2011)
+
+  29 Aug 2011; Torsten Veller <tove@gentoo.org>
+  +MooseX-GlobRef-0.70.100.ebuild:
+  Change version scheme
 
   14 Jan 2011; Torsten Veller <tove@gentoo.org> -MooseX-GlobRef-0.07.ebuild:
   Cleanup
